--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Web site created using create-react-app" />
+			content="A York specific Wordle clone, made by Yordevs" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/yordlelogo.png" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
